pornstar and pornstar-individual pages: fixed images stretching, sort by dropdown issue

--- a/feelPornStar/thank-you/css/thank-you.scss
+++ b/feelPornStar/thank-you/css/thank-you.scss
@@ -1,170 +1,172 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap');
 
-.main-content-thank-you {
-  font-family: Oswald, sans-serif;
-  background-color: #020202;
+.template_body{
+  background: #020202!important;
+  .main-content-thank-you {
+    font-family: Oswald, sans-serif;
 
-  .banner {
-    background-image: url(../img/header-bg.png);
-    background-size: cover;
-    padding: 30px;
-    background-position: center;
-    @media (min-width: 600px) {
-      padding: 40px 20px;
-    }
-    @media (min-width: 768px) {
-      padding: 50px 20px;
-    }
-    @media (min-width: 1024px) {
-      padding: 60px 70px;
-    }
-    @media (min-width: 1200px) {
-      padding-top: 84px;
-      padding-bottom: 70px;
-    }
-
-    .title {
-      font-size: 38px;
-      margin-bottom: 30px;
-      text-align: center;
+    .banner {
+      background-image: url(../img/header-bg.png);
+      background-size: cover;
+      padding: 30px;
+      background-position: center;
       @media (min-width: 600px) {
-        font-size: 45px;
+        padding: 40px 20px;
       }
       @media (min-width: 768px) {
-        font-size: 50px;
-        margin-bottom: 40px;
+        padding: 50px 20px;
       }
       @media (min-width: 1024px) {
-        font-size: 58px;
-        margin-bottom: 50px;
+        padding: 60px 70px;
       }
       @media (min-width: 1200px) {
-        font-size: 68px;
-        margin-bottom: 60px;
+        padding-top: 84px;
+        padding-bottom: 70px;
       }
-    }
 
-    .main-text {
-      font-size: 16px;
-      font-weight: 300;
-      max-width: 1200px;
-      @media (min-width: 600px) {
-        font-size: 18px;
-      }
-      @media (min-width: 768px) {
-        font-size: 20px;
-      }
-      @media (min-width: 1024px) {
-        font-size: 28px;
-      }
-      @media (min-width: 1200px) {
-        font-size: 36px;
-      }
-    }
-
-    .attention {
-      margin-top: 30px;
-      margin-bottom: 30px;
-      color: #9e2a3e;
-      font-weight: 500;
-      @media (min-width: 768px) {
-        margin-top: 40px;
-        margin-bottom: 40px;
-      }
-      @media (min-width: 1024px) {
-        margin-top: 50px;
-        margin-bottom: 50px;
-      }
-      @media (min-width: 1200px) {
-        margin-top: 60px;
-      }
-    }
-  }
-
-  .registration {
-    background-image: url(../img/registration-bg.png);
-    background-size: cover;
-    margin-top: 70px;
-    margin-bottom: 60px;
-    max-width: 1100px;
-    padding: 20px 30px;
-    background-position: center;
-    @media (min-width: 600px) {
-      font-size: 18px;
-    }
-    @media (min-width: 768px) {
-      font-size: 20px;
-    }
-    @media (min-width: 1024px) {
-      padding: 50px 100px 30px 100px;
-    }
-
-    .title {
-      font-size: 25px;
-      margin-bottom: 20px;
-      font-weight: 400;
-      @media (min-width: 600px) {
-        font-size: 28px;
-      }
-      @media (min-width: 768px) {
-        font-size: 35px;
+      .title {
+        font-size: 38px;
         margin-bottom: 30px;
-      }
-      @media (min-width: 1024px) {
-        font-size: 45px;
-        margin-bottom: 40px;
-      }
-      @media (min-width: 1200px) {
-        font-size: 55px;
-      }
-    }
-
-    .main-text {
-      font-size: 14px;
-      margin-bottom: 40px;
-
-      &:last-of-type {
-        margin-bottom: 0;
-        small{
-          font-size: 70%;
+        text-align: center;
+        @media (min-width: 600px) {
+          font-size: 45px;
+        }
+        @media (min-width: 768px) {
+          font-size: 50px;
+          margin-bottom: 40px;
+        }
+        @media (min-width: 1024px) {
+          font-size: 58px;
+          margin-bottom: 50px;
+        }
+        @media (min-width: 1200px) {
+          font-size: 68px;
+          margin-bottom: 60px;
         }
       }
 
-      @media (min-width: 600px) {
+      .main-text {
         font-size: 16px;
+        font-weight: 300;
+        max-width: 1200px;
+        @media (min-width: 600px) {
+          font-size: 18px;
+        }
+        @media (min-width: 768px) {
+          font-size: 20px;
+        }
+        @media (min-width: 1024px) {
+          font-size: 28px;
+        }
+        @media (min-width: 1200px) {
+          font-size: 36px;
+        }
       }
-      @media (min-width: 768px) {
-        font-size: 20px;
-        margin-bottom:50px;
-      }
-      @media (min-width: 1024px) {
-        font-size: 22px;
-        margin-bottom: 60px;
-      }
-      @media (min-width: 1200px) {
-        font-size: 24px;
+
+      .attention {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        color: #9e2a3e;
+        font-weight: 500;
+        @media (min-width: 768px) {
+          margin-top: 40px;
+          margin-bottom: 40px;
+        }
+        @media (min-width: 1024px) {
+          margin-top: 50px;
+          margin-bottom: 50px;
+        }
+        @media (min-width: 1200px) {
+          margin-top: 60px;
+        }
       }
     }
 
-    .btn-danger {
-      padding: 10px 50px;
-      font-size: 16px;
-      background-color: #9e2a3e !important;
-      border: none;
-      margin-bottom: 10px;
+    .registration {
+      background-image: url(../img/registration-bg.png);
+      background-size: cover;
+      margin-top: 70px;
+      margin-bottom: 60px;
+      max-width: 1100px;
+      padding: 20px 30px;
+      background-position: center;
       @media (min-width: 600px) {
         font-size: 18px;
       }
       @media (min-width: 768px) {
-        font-size: 22px;
-        margin-bottom: 20px;
+        font-size: 20px;
       }
       @media (min-width: 1024px) {
-        font-size: 26px;
+        padding: 50px 100px 30px 100px;
       }
-      @media (min-width: 1200px) {
-        font-size: 30px;
-        margin-bottom: 30px;
+
+      .title {
+        font-size: 25px;
+        margin-bottom: 20px;
+        font-weight: 400;
+        @media (min-width: 600px) {
+          font-size: 28px;
+        }
+        @media (min-width: 768px) {
+          font-size: 35px;
+          margin-bottom: 30px;
+        }
+        @media (min-width: 1024px) {
+          font-size: 45px;
+          margin-bottom: 40px;
+        }
+        @media (min-width: 1200px) {
+          font-size: 55px;
+        }
+      }
+
+      .main-text {
+        font-size: 14px;
+        margin-bottom: 40px;
+
+        &:last-of-type {
+          margin-bottom: 0;
+          small{
+            font-size: 70%;
+          }
+        }
+
+        @media (min-width: 600px) {
+          font-size: 16px;
+        }
+        @media (min-width: 768px) {
+          font-size: 20px;
+          margin-bottom:50px;
+        }
+        @media (min-width: 1024px) {
+          font-size: 22px;
+          margin-bottom: 60px;
+        }
+        @media (min-width: 1200px) {
+          font-size: 24px;
+        }
+      }
+
+      .btn-danger {
+        padding: 10px 50px;
+        font-size: 16px;
+        background-color: #9e2a3e !important;
+        border: none;
+        margin-bottom: 10px;
+        @media (min-width: 600px) {
+          font-size: 18px;
+        }
+        @media (min-width: 768px) {
+          font-size: 22px;
+          margin-bottom: 20px;
+        }
+        @media (min-width: 1024px) {
+          font-size: 26px;
+        }
+        @media (min-width: 1200px) {
+          font-size: 30px;
+          margin-bottom: 30px;
+        }
       }
     }
   }
